--- a/photo-gallery/index.html
+++ b/photo-gallery/index.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width"/>
   <title>CodePen - HTML CSS photo gallery</title>
   <link rel="stylesheet" href="./style.css">
 
