--- a/Auto-Slideshow/index.html
+++ b/Auto-Slideshow/index.html
@@ -9,10 +9,9 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <img src="image-1.jpg">
-            <img src="image-2.jpg">
-            <img src="image-3.jpg">
-            <img src="image-4.jpg">
+            <img src="image-1.png">
+            <img src="image-2.png">
+            <img src="image-3.png">
         </div>
     </div>
 </body>
