--- a/Auto-Slideshow/index.html
+++ b/Auto-Slideshow/index.html
@@ -12,6 +12,7 @@
             <img src="image-1.jpg">
             <img src="image-2.jpg">
             <img src="image-3.jpg">
+            <img src="image-1.jpg">
         </div>
     </div>
 </body>
