--- a/notion-quote/index.html
+++ b/notion-quote/index.html
@@ -113,6 +113,11 @@
         }
         
         @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #000;
+                color: #fff;
+            }
+
             .light {
                 color: rgba(255, 255, 255, 0.9) !important;
                 background-color: #000 !important;
