--- a/Auto-Slideshow/index.html
+++ b/Auto-Slideshow/index.html
@@ -14,12 +14,13 @@
       <img src="image-1.jpg">
       <img src="image-2.jpg">
       <img src="image-3.jpg">
+      <img src="image-5.jpg">
       <img src="image-1.jpg">
     </div>
   </div>
 
   <script>
-    let photos = 3; // 设置乘法因子
+    let photos = 4; // 设置乘法因子
     let animationDuration = `${photos * 5}s`; // 计算持续时间
     let animationPercent = 100 / photos; // 计算持续时间
 
