--- a/Auto-Slideshow/index.html
+++ b/Auto-Slideshow/index.html
@@ -20,9 +20,9 @@
   </div>
 
   <script>
-    let photos = 4; // 设置乘法因子
-    let animationDuration = `${photos * 5}s`; // 计算持续时间
-    let animationPercent = 100 / photos; // 计算持续时间
+    let photos = 4; // How many photos?
+    let animationDuration = `${photos * 5}s`; // Calculate animation duration.
+    let animationPercent = 100 / photos; // Calculate percentage of a second.
 
     let styles = '@keyframes slide {';
     styles += `
@@ -53,7 +53,7 @@
         .wrapper {
             width: 100%;
             display: flex;
-            animation: slide ${animationDuration} linear infinite; /* 修改动画持续时间 */
+            animation: slide ${animationDuration} linear infinite; /* Modify animation duration */
         }
     `;
 
