--- a/Auto-Slideshow/index.html
+++ b/Auto-Slideshow/index.html
@@ -22,7 +22,7 @@
   <script>
     let photos = 4; // How many photos?
     let animationDuration = `${photos * 5}s`; // Calculate animation duration.
-    let animationPercent = (100 / photos).toFixed(2); // Calculate percentage of a second.
+    let animationPercent = (100 / photos); // Calculate percentage of a second.
 
     let styles = '@keyframes slide {';
     styles += `
