--- a/Auto-Slideshow/index.html
+++ b/Auto-Slideshow/index.html
@@ -28,11 +28,11 @@
     // Dynamically generate img elements
     for (let i = 1; i <= numberOfImages; i++) {
       const img = document.createElement('img');
-      img.src = `image-${i}.jpg`;
+      img.src = `Pic/image_${i}.jpg`;
       container.appendChild(img);
     }
     const img = document.createElement('img');
-    img.src = `image-1.jpg`;
+    img.src = `Pic/image_1.jpg`;
     container.appendChild(img);
 
     let animationDuration = `${numberOfImages * 5}s`; // Calculate animation duration.
