--- a/MySlogan/index.html
+++ b/MySlogan/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>垂直置中文本</title>
+  <title>可编辑的文本</title>
   <style>
     body {
       display: flex;
@@ -20,7 +20,26 @@
 </head>
 <body>
   <div>"</div>
-  <div class="center">I can do all things…</div>
+  <div class="center" contenteditable="true" id="editableText">I can do all things…</div>
   <div>"</div>
+
+  <script>
+    // 获取可编辑文本元素
+    const editableText = document.getElementById('editableText');
+
+    // 尝试从本地存储中获取已保存的文本内容
+    const savedText = localStorage.getItem('savedText');
+
+    // 如果已保存的文本内容存在，则将其显示在可编辑文本区域中
+    if (savedText) {
+      editableText.innerText = savedText;
+    }
+
+    // 监听文本变化事件
+    editableText.addEventListener('input', function() {
+      // 将新的文本内容保存到本地存储中
+      localStorage.setItem('savedText', this.innerText);
+    });
+  </script>
 </body>
 </html>
