revised dark rgb.

--- a/MySlogan/index.html
+++ b/MySlogan/index.html
@@ -18,8 +18,8 @@
 
     @media (prefers-color-scheme: dark) {
       body {
-        background-color: black; /* 暗黑模式下背景為黑色 */
-        color: white;            /* 暗黑模式下文字為白色 */
+        background-color: rgb(25, 25, 25); /* 暗黑模式下背景為黑色 */
+        color: white;                      /* 暗黑模式下文字為白色 */
       }
     }
 
