"Toggle Color Theme" to "Mode".

--- a/MySlogan/index.html
+++ b/MySlogan/index.html
@@ -49,7 +49,7 @@
   <div class="center" contenteditable="true" id="editableText">I can do all things…</div>
   <div>"</div>
 
-  <button id="colorThemeButton" onclick="toggleColorTheme()">Toggle Color Theme</button>
+  <button id="colorThemeButton" onclick="toggleColorTheme()">Mode</button>
 
   <script>
     /* Get the editable text element */
