Fixed button size.

--- a/MySlogan/index.html
+++ b/MySlogan/index.html
@@ -29,6 +29,8 @@
     }
 
     #colorThemeButton {
+      width: 100px;
+      height: 40px;
       position: fixed;
       bottom: 20px;
       right: 20px;
