--- a/Word-Wall/index.html
+++ b/Word-Wall/index.html
@@ -32,7 +32,7 @@
     function fetchImages() {
       const imageExtensions = ['.png', '.jpg', '.jpeg', '.gif'];
 
-      fetch('Pic/')
+      fetch('./Pic/')
         .then(response => response.text())
         .then(data => {
           const parser = new DOMParser();
