--- a/Word-Wall/index.html
+++ b/Word-Wall/index.html
@@ -43,7 +43,10 @@
     /* Set the theme of the document body based on the given theme parameter. */
     function setTheme(theme) {
       document.body.style.backgroundColor = theme === 'dark' ? 'rgb(25, 25, 25)' : 'white';
-      document.photo.filter = theme === 'dark' ? 'invert(100%)' : 'none';
+      const photos = document.querySelectorAll('.photo');
+      photos.forEach(photo => {
+        photo.style.filter = theme === 'dark' ? 'invert(100%)' : 'none';
+      });
     }
 
     /* Check the theme setting in localStorage when the page loads */
@@ -150,7 +153,6 @@
         window.addEventListener('mouseup', stopMoving);
       });
     }
-
     
     getImageCount();
   </script>
