[Word-Wall] Revised photo to img.

--- a/Word-Wall/index.html
+++ b/Word-Wall/index.html
@@ -45,7 +45,7 @@
       document.body.style.backgroundColor = theme === 'dark' ? 'rgb(25, 25, 25)' : 'white';
       const photos = document.querySelectorAll('.photo');
       photos.forEach(photo => {
-        photo.style.filter = theme === 'dark' ? 'invert(100%)' : 'none';
+        img.style.filter = theme === 'dark' ? 'invert(100%)' : 'none';
       });
     }
 
