--- a/Word-Wall/index.html
+++ b/Word-Wall/index.html
@@ -44,7 +44,7 @@
     function setTheme(theme) {
       document.body.style.backgroundColor = theme === 'dark' ? 'rgb(25, 25, 25)' : 'white';
       const photos = document.querySelectorAll('.photo');
-      photos.forEach(photo => {
+      photos.forEach(img => {
         img.style.filter = theme === 'dark' ? 'invert(100%)' : 'none';
       });
     }
