--- a/Word-Wall/index.html
+++ b/Word-Wall/index.html
@@ -40,21 +40,12 @@
 
 <body>
   <script>
-    /* Set the theme of the document body based on the given theme parameter. */
-    function setTheme(theme) {
-      document.body.style.backgroundColor = theme === 'dark' ? 'rgb(25, 25, 25)' : 'white';
-      const photos = document.querySelectorAll('.photo');
-      photos.forEach(img => {
-        img.style.filter = theme === 'dark' ? 'invert(100%)' : 'none';
-      });
-    }
+    const theme = localStorage.getItem('mode');
 
     /* Check the theme setting in localStorage when the page loads */
     document.addEventListener('DOMContentLoaded', function() {
-      const theme = localStorage.getItem('mode');
-      if (theme) {
-        setTheme(theme);
-      }
+      if (theme)
+        document.body.style.backgroundColor = theme === 'dark' ? 'rgb(25, 25, 25)' : 'white';
     });
 
     function getImageCount() {
@@ -71,6 +62,10 @@
         };
         img.onerror = function () {
           // All images are loaded or not found, do nothing
+          // const theme = localStorage.getItem('mode');
+          // if (theme) {
+          //   setTheme(theme);
+          // }
         };
         img.src = `Pic/image_${i}.png`;
       }
@@ -80,7 +75,13 @@
     }
 
     function getRandomSize() {
-      return Math.floor(Math.random() * (200 - 100 + 1)) + 100;
+      const minPercentage = 20; // 10%
+      const maxPercentage = 40; // 20%
+
+      const minSize = Math.floor((window.innerWidth * minPercentage) / 100);
+      const maxSize = Math.floor((window.innerWidth * maxPercentage) / 100);
+
+      return Math.floor(Math.random() * (maxSize - minSize + 1)) + minSize;
     }
 
     function getRandomPosition(existingPositions, width, height) {
@@ -102,8 +103,8 @@
       const img = document.createElement('img');
       img.src = `Pic/${photo}`;
       img.classList.add('photo');
-      const width = getRandomSize();
-      const height = getRandomSize();
+      let width = getRandomSize();
+      let height = getRandomSize();
 
       // Get the actual width and height of the image
       const imgWidth = img.naturalWidth;
@@ -112,13 +113,19 @@
       if (imgWidth > imgHeight) {
         img.style.width = `${width}px`;
         img.style.height = 'auto';
+        height = width;
       } else {
         img.style.width = 'auto';
         img.style.height = `${height}px`;
+        width = height;
       }
       const { x, y } = getRandomPosition(existingPositions, width, height);
       img.style.left = `${x}px`;
       img.style.top = `${y}px`;
+
+      if (theme)
+        img.style.filter = theme === 'dark' ? 'invert(100%)' : 'none';
+
       document.body.appendChild(img);
 
       img.addEventListener('mousedown', (e) => {
