[notion-quote] Update color.

--- a/notion-quote/index.html
+++ b/notion-quote/index.html
@@ -105,19 +105,19 @@
     }
 
     .light {
-      color: rgba(0, 0, 0, 0.9);
+      color: rgb(0, 0, 0);
       background-color: #ffffff !important;
     }
 
     .dark {
-      color: rgba(255, 255, 255, 0.9);
+      color: rgb(255, 255, 255);
       background-color: rgb(25, 25, 25) !important;
     }
 
     @media (prefers-color-scheme: dark) {
       body {
-        background-color: #000;
         color: #fff;
+        background-color: rgb(25, 25, 25);
       }
     }
 
