--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -10,15 +10,20 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: white;
+            overflow: hidden;
         }
         .vocab-container {
             text-align: center;
-            background-color: #fff;
+            background-color: #f0f0f0;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
+            max-width: 90%;
+            max-height: 90%;
+            overflow: auto;
         }
         .vocab-container h1 {
             font-size: 24px;
@@ -27,6 +32,12 @@
         .vocab-container p {
             font-size: 18px;
             margin: 5px 0;
+        }
+        
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: rgb(25, 25, 25); /* Black background in dark mode */
+            }
         }
     </style>
 </head>
@@ -43,6 +54,14 @@
     <script src="vocab.js"></script>
 
     <script>
+        const theme = localStorage.getItem('mode');
+        
+        /* Check the theme setting in localStorage when the page loads */
+        document.addEventListener('DOMContentLoaded', function() {
+            if (theme)
+                document.body.style.backgroundColor = theme === 'dark' ? 'rgb(25, 25, 25)' : 'white';
+        });
+
         document.addEventListener('DOMContentLoaded', () => {
             // 確保 vocabList 已經被加載
             if (typeof vocabList !== 'undefined') {
